Prod-EU/force-app/main/default/objects/Account/fields/Account_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_18_Digit_Id__c</fullName>
    <description>This will convert the 15 digit id to 18 digit id</description>
    <formula>CASESAFEID(Id)</formula>
    <label>Account 18 Digit Id</label>
    <type>Text</type>
</CustomField>