Prod-EU/force-app/main/default/objects/Account/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>Forumula field to mimic out of box AcccountOwner field. This was created to avoid end users to change the Account Owner.</description>
    <formula>HYPERLINK(&quot;/&quot; &amp;OwnerId, Owner.FirstName &amp; &quot;, &quot; &amp; Owner.LastName)</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>