Prod-EU/force-app/main/default/objects/Account/fields/Active_Payor_SSIP_Rules_Override__c.field-meta.xml
<CustomField>
    <fullName>Active_Payor_SSIP_Rules_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is used to override the number of SSIP Rules associated with the Payor. Flag will be used in SFCC to hide the Pricing information.</description>
    <label>Active Payor SSIP Rules Override</label>
    <type>Checkbox</type>
</CustomField>