Prod-EU/force-app/main/default/objects/Account/fields/Active_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Field tracks the date for legacy accounts. For all new accounts created in Salesforce, this will be defaulted to today&apos;s date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Active Start Date</label>
    <type>Date</type>
</CustomField>