Prod-EU/force-app/main/default/objects/Account/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <description>To Populate Address Line 2 in S-Docs.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Line 2 (S-Docs)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>