Prod-EU/force-app/main/default/objects/Account/fields/Below_50mg_dl_in_Last_3_Months__c.field-meta.xml
<CustomField>
    <fullName>Below_50mg_dl_in_Last_3_Months__c</fullName>
    <label>Below 50mg/dl in Last 3 Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>