Prod-EU/force-app/main/default/objects/Account/fields/Benefit__c.field-meta.xml
<CustomField>
    <fullName>Benefit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tracks the primary benefit record</description>
    <label>Primary Benefit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Benefit__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Benefit__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>AccountBenefits</relationshipName>
    <type>Lookup</type>
</CustomField>