Prod-EU/force-app/main/default/objects/Account/fields/Benefit_Customer_Service_Phone__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Customer_Service_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Service Phone</label>
    <type>Phone</type>
</CustomField>