Prod-EU/force-app/main/default/objects/Account/fields/Benefit_Insurant_Status__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Insurant_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurant Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>