Prod-EU/force-app/main/default/objects/Account/fields/Benefit_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Member_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Member ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>