Prod-EU/force-app/main/default/objects/Account/fields/Benefit_Provider_Service_Phone__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Provider_Service_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provider Service Phone</label>
    <type>Phone</type>
</CustomField>