Prod-EU/force-app/main/default/objects/Account/fields/BG_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>BG_Unit_of_Measure__c</fullName>
    <description>This field is used by Marketing cloud. This field stores the Unit of Measurement for Blood Glucose level.</description>
    <label>BG Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mmol/L</fullName>
            </value>
            <value>
                <fullName>mg/dL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>