Prod-EU/force-app/main/default/objects/Account/fields/Blind__c.field-meta.xml
<CustomField>
    <fullName>Blind__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blind?</label>
    <type>Checkbox</type>
</CustomField>