Prod-EU/force-app/main/default/objects/Account/fields/CA_Coverage_Details__c.field-meta.xml
<CustomField>
    <fullName>CA_Coverage_Details__c</fullName>
    <description>Details about the Coverage provided by the Insurance/Government Agency.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Details about the Coverage provided by the Insurance/Government Agency.</inlineHelpText>
    <label>Coverage Details</label>
    <length>250</length>
    <type>Text</type>
</CustomField>