Prod-EU/force-app/main/default/objects/Account/fields/CA_Determination_Response_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>CA_Determination_Response_Sent_To__c</fullName>
    <description>In Canada, to whom the Pre-Auth Determination is communicated.</description>
    <inlineHelpText>To whom is the Pre-Auth Determination communicated</inlineHelpText>
    <label>Determination Response Sent To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient Only</fullName>
            </value>
            <value>
                <fullName>Patient &amp; Dexcom</fullName>
            </value>
            <value>
                <fullName>Dexcom Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>