Prod-EU/force-app/main/default/objects/Account/fields/CA_Docs_Required__c.field-meta.xml
<CustomField>
    <fullName>CA_Docs_Required__c</fullName>
    <description>This field captures the Docs that need to be submitted to Insurance/Government Agency for Pre-Auth in Canada.</description>
    <inlineHelpText>Docs that need to be submitted to Insurance/Government Agency for Pre-Auth</inlineHelpText>
    <label>Docs Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CA_Payor_Docs_Required</valueSetName>
    </valueSet>
</CustomField>