Prod-EU/force-app/main/default/objects/Account/fields/CA_First_Nation_ID__c.field-meta.xml
<CustomField>
    <fullName>CA_First_Nation_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Nation ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>