Prod-EU/force-app/main/default/objects/Account/fields/CA_GST_HST_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>CA_GST_HST_Registration_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GST/HST Registration Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>