Prod-EU/force-app/main/default/objects/Account/fields/CA_MB_State_PST_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>CA_MB_State_PST_Registration_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MB State PST Registration Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>