Prod-EU/force-app/main/default/objects/Account/fields/CA_QC_State_PST_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>CA_QC_State_PST_Registration_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QC State PST Registration Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>