Prod-EU/force-app/main/default/objects/Account/fields/CA_Response_Communication_Method__c.field-meta.xml
<CustomField>
    <fullName>CA_Response_Communication_Method__c</fullName>
    <description>In Canada, the method(s) of Determination Communication from the Insurance/Government Agency.</description>
    <inlineHelpText>Method(s) of Determination Communication</inlineHelpText>
    <label>Response Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Online Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>