Prod-EU/force-app/main/default/objects/Account/fields/CA_SK_State_PST_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>CA_SK_State_PST_Registration_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SK State PST Registration Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>