Prod-EU/force-app/main/default/objects/Account/fields/Cert_Dexcom_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Cert_Dexcom_Instructor__c</fullName>
    <description>Multi select field to track the Dexcom certification.</description>
    <label>Cert Dexcom Instructor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>G6 Certified</fullName>
            </value>
            <value>
                <fullName>G5 Certified</fullName>
            </value>
            <value>
                <fullName>G4 Certified</fullName>
            </value>
            <value>
                <fullName>G6 Certified plus does Training</fullName>
            </value>
            <value>
                <fullName>G5 Certified plus does Training</fullName>
            </value>
            <value>
                <fullName>G4 Certified plus does Training</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>