Prod-EU/force-app/main/default/objects/Account/fields/Cert_Instructor_Date__c.field-meta.xml
<CustomField>
    <fullName>Cert_Instructor_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cert Instructor Date</label>
    <type>Date</type>
</CustomField>