Prod-EU/force-app/main/default/objects/Account/fields/Certified_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Certified_Trainer__c</fullName>
    <formula>IF ( NOT(ISBLANK(Prescriber__r.Cert_Dexcom_Instructor__c)), TRUE, FALSE )</formula>
    <label>Certified Trainer?</label>
    <type>Checkbox</type>
</CustomField>