Prod-EU/force-app/main/default/objects/Account/fields/CMN_or_Rx_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CMN_or_Rx_Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Not used anymore, please refer to Opportunity.</inlineHelpText>
    <label>CMN or Rx Expiration Date (Historical)</label>
    <type>Date</type>
</CustomField>