Prod-EU/force-app/main/default/objects/Account/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Comment for Switzerland</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>