Prod-EU/force-app/main/default/objects/Account/fields/Competitive_Info__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Info__c</fullName>
    <label>Competitive Info</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medtronic</fullName>
            </value>
            <value>
                <fullName>Abbott</fullName>
            </value>
            <value>
                <fullName>Roche</fullName>
            </value>
            <value>
                <fullName>Senseonics</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>