Prod-EU/force-app/main/default/objects/Account/fields/Consent_From_Patient_data__c.field-meta.xml
<CustomField>
    <fullName>Consent_From_Patient_data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Consent check</description>
    <label>Consent From Patient data</label>
    <type>Checkbox</type>
</CustomField>