Prod-EU/force-app/main/default/objects/Account/fields/Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Contact_Details__c</fullName>
    <description>Primary Contact for Swiss</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>