Prod-EU/force-app/main/default/objects/Account/fields/Copy_Billing_To_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Copy_Billing_To_Shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will allow users to choose to copy Billing to Shipping</description>
    <label>Copy Billing To Shipping</label>
    <type>Checkbox</type>
</CustomField>