Prod-EU/force-app/main/default/objects/Account/fields/Copy_Shipping_To_Billing__c.field-meta.xml
<CustomField>
    <fullName>Copy_Shipping_To_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will allow users to choose to copy Shipping to Billing</description>
    <label>Copy Shipping To Billing</label>
    <type>Checkbox</type>
</CustomField>