Prod-EU/force-app/main/default/objects/Account/fields/Credit_Hold__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag denotes if a customer is on Credit hold or not</description>
    <label>Credit Hold</label>
    <type>Checkbox</type>
</CustomField>