Prod-EU/force-app/main/default/objects/Account/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <description>Holds reference Id for Customer in Oracle</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>