Prod-EU/force-app/main/default/objects/Account/fields/Delivery_Term__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Term__c</fullName>
    <label>Delivery Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_Terms</valueSetName>
    </valueSet>
</CustomField>