Prod-EU/force-app/main/default/objects/Account/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description used to track important information about the account.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>