Prod-EU/force-app/main/default/objects/Account/fields/Dexcom_Decile__c.field-meta.xml
<CustomField>
    <fullName>Dexcom_Decile__c</fullName>
    <label>Dexcom Decile</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>