Prod-EU/force-app/main/default/objects/Account/fields/Dexcom_ID__c.field-meta.xml
<CustomField>
    <fullName>Dexcom_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dexcom ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>