Prod-EU/force-app/main/default/objects/Account/fields/Dexcom_Tier__c.field-meta.xml
<CustomField>
    <fullName>Dexcom_Tier__c</fullName>
    <label>Dexcom Tier</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A-3</fullName>
            </value>
            <value>
                <fullName>B-2</fullName>
            </value>
            <value>
                <fullName>C-1</fullName>
            </value>
            <value>
                <fullName>D-0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>