Prod-EU/force-app/main/default/objects/Account/fields/Diabetes_Related_Complications__c.field-meta.xml
<CustomField>
    <fullName>Diabetes_Related_Complications__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Diabetes Related Complications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>