Prod-EU/force-app/main/default/objects/Account/fields/Diabetes_Related_Hospital_Visits__c.field-meta.xml
<CustomField>
    <fullName>Diabetes_Related_Hospital_Visits__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Diabetes Related Hospital Visits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>