Prod-EU/force-app/main/default/objects/Account/fields/Diagnosis_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Code_2__c</fullName>
    <label>Diagnosis Code 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diabetes Mellitus Typ 1</fullName>
            </value>
            <value>
                <fullName>Diabetes Mellitus Typ 2</fullName>
            </value>
            <value>
                <fullName>Diabetes Mellitus Typ 3</fullName>
            </value>
            <value>
                <fullName>Andere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>