Prod-EU/force-app/main/default/objects/Account/fields/DOB_EU_Format__c.field-meta.xml
<CustomField>
    <fullName>DOB_EU_Format__c</fullName>
    <formula>If(NOT(ISNULL(PersonBirthdate)), TEXT(DAY(PersonBirthdate))+&quot;/&quot; +TEXT(MONTH(PersonBirthdate))+&quot;/&quot; +TEXT(YEAR(PersonBirthdate)), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOB EU Format</label>
    <type>Text</type>
</CustomField>