Prod-EU/force-app/main/default/objects/Account/fields/DOB_US_Format__c.field-meta.xml
<CustomField>
    <fullName>DOB_US_Format__c</fullName>
    <formula>If(NOT(ISNULL(PersonBirthdate)), TEXT(MONTH(PersonBirthdate))+&quot;/&quot; +TEXT(DAY(PersonBirthdate))+&quot;/&quot; +TEXT(YEAR(PersonBirthdate)), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOB US Format</label>
    <type>Text</type>
</CustomField>