Prod-EU/force-app/main/default/objects/Account/fields/Efficacy_Status__c.field-meta.xml
<CustomField>
    <fullName>Efficacy_Status__c</fullName>
    <defaultValue>&apos;Good&apos;</defaultValue>
    <description>Used by GB and IE Consumers. Good is the default value.</description>
    <label>Efficacy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Watch List</fullName>
            </value>
            <value>
                <fullName>Assessment Needed</fullName>
            </value>
            <value>
                <fullName>Training Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>