Prod-EU/force-app/main/default/objects/Account/fields/Email_Invoice_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Email_Invoice_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Invoice Opt In</label>
    <type>Checkbox</type>
</CustomField>