Prod-EU/force-app/main/default/objects/Account/fields/Email_Opt_In_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_Last_Modified__c</fullName>
    <description>Email Opt In Last Modified Date/Time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Opt In Last Modified</label>
    <type>DateTime</type>
</CustomField>