Prod-EU/force-app/main/default/objects/Account/fields/Email_Opt_In_List__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_List__c</fullName>
    <description>Email Opt In</description>
    <label>Email Opt In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>