Prod-EU/force-app/main/default/objects/Account/fields/Email_Opt_In_Method__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In_Method__c</fullName>
    <description>Method customer opted in for email</description>
    <label>Email Opt In Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Opt_In_Method</valueSetName>
    </valueSet>
</CustomField>