Prod-EU/force-app/main/default/objects/Account/fields/Email_Opt_Out_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out_Last_Modified__c</fullName>
    <description>Email opt out date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Opt Out Last Modified</label>
    <type>DateTime</type>
</CustomField>