Prod-EU/force-app/main/default/objects/Account/fields/Email_Pending_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Email_Pending_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initiate Unsubscribe</label>
    <type>Checkbox</type>
</CustomField>