Prod-EU/force-app/main/default/objects/Account/fields/Facility_Number__c.field-meta.xml
<CustomField>
    <fullName>Facility_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Facility Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>