Prod-EU/force-app/main/default/objects/Account/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fund the customer is associated to</description>
    <label>Fund</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <filterItems>
            <field>$Source.Payor__c</field>
            <operation>equals</operation>
            <valueField>Fund__c.Payor__c</valueField>
        </filterItems>
        <filterItems>
            <field>Fund__c.Is_Fund_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Fund__c.Payor__c</valueField>
        </filterItems>
        <infoMessage>Fund is not active.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Consumers</relationshipLabel>
    <relationshipName>Funds</relationshipName>
    <type>Lookup</type>
</CustomField>