Prod-EU/force-app/main/default/objects/Account/fields/G6_Eligible__c.field-meta.xml
<CustomField>
    <fullName>G6_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to track if the Payor is eligible for G6</description>
    <label>G6 Eligible</label>
    <type>Checkbox</type>
</CustomField>