Prod-EU/force-app/main/default/objects/Account/fields/G6_Instructions_Shipped__c.field-meta.xml
<CustomField>
    <fullName>G6_Instructions_Shipped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If G6 IFUs shipped</description>
    <label>G6 Instructions Shipped</label>
    <type>Checkbox</type>
</CustomField>