Prod-EU/force-app/main/default/objects/Account/fields/G6_Starter_Kit_Conversion__c.field-meta.xml
<CustomField>
    <fullName>G6_Starter_Kit_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tells if the customer made any purchase after buying a G6 Starter Kit. Should be used along with G6_Starter_Kit_Ship_Date__c.</description>
    <label>G6 Starter Kit Conversion</label>
    <type>Checkbox</type>
</CustomField>