Prod-EU/force-app/main/default/objects/Account/fields/G6_Starter_Kit_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>G6_Starter_Kit_Ship_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>G6 Starter Kit Ship Date</label>
    <type>DateTime</type>
</CustomField>