Prod-EU/force-app/main/default/objects/Account/fields/G6_Transmitter_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>G6_Transmitter_Ship_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>G6 Transmitter Ship Date</label>
    <type>DateTime</type>
</CustomField>