Prod-EU/force-app/main/default/objects/Account/fields/HbA1c_Result_1__c.field-meta.xml
<CustomField>
    <fullName>HbA1c_Result_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HbA1c Result 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>