Prod-EU/force-app/main/default/objects/Account/fields/HbA1c_Result_1_Date__c.field-meta.xml
<CustomField>
    <fullName>HbA1c_Result_1_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HbA1c Result 1 Date</label>
    <type>Date</type>
</CustomField>