Prod-EU/force-app/main/default/objects/Account/fields/High_Priority__c.field-meta.xml
<CustomField>
    <fullName>High_Priority__c</fullName>
    <formula>IF( 
OR(Pediatric__c=TRUE, 
VIP__c=TRUE, 
Pregnant_or_Planning_Pregnancy__c= TRUE),&apos;YES&apos;,&apos;NO&apos;)</formula>
    <label>High Priority?</label>
    <type>Text</type>
</CustomField>