Prod-EU/force-app/main/default/objects/Account/fields/Higher_Glucose_in_Morning__c.field-meta.xml
<CustomField>
    <fullName>Higher_Glucose_in_Morning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Higher Glucose in Morning</label>
    <type>Checkbox</type>
</CustomField>