Prod-EU/force-app/main/default/objects/Account/fields/Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone__c</fullName>
    <description>This custom field will be mapped in the Lead conversion. Created for CH.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Home phone</label>
    <type>Phone</type>
</CustomField>