Prod-EU/force-app/main/default/objects/Account/fields/Hospital_Visit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Visit_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hospital Visit Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>