Prod-EU/force-app/main/default/objects/Account/fields/Hypoglycemic_Unawareness__c.field-meta.xml
<CustomField>
    <fullName>Hypoglycemic_Unawareness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hypoglycemic Unawareness?</label>
    <type>Checkbox</type>
</CustomField>